[package]
name = "blockchain_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
libp2p = { version = "^0.51.3", features = ["mdns", "tcp"] }
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
sha2 = "0.10.6"
hex = "0.4"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"
uuid = { version = "1.3.3", features = ["v4"] }